--- a/package.json
+++ b/package.json
@@ -7,22 +7,31 @@
     "build": "npx tsc",
     "start": "node dist/index.js",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js $PORT\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx tsc && jest --coverage",
+    "test:watch": "npx test && jest --watch",
+    "testratelimiter": "npx tsc && node dist/testratelimiter.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.18",
+    "@types/jest": "^29.5.5",
+    "@types/memcached": "^2.2.8",
     "@types/node": "^20.7.1",
     "concurrently": "^8.2.1",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.1",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.2.2"
   },
   "dependencies": {
     "axios": "^1.5.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "request": "^2.88.2"
+    "memcached": "^2.2.2",
+    "redis": "^4.6.10",
+    "request": "^2.88.2",
+    "ts-node": "^10.9.1"
   }
 }
